# xl2txt

./: Cargo.toml  README.md
gitdiff/: .gitattributes  README.md  xl2txt
src/: errors.rs  main.rs
tests/.issues.xlsb/: names.txt  refs.md
tests/.issues.xlsb/data/: datatypes.md  issue2.md  issue5.md  issue6.md  spc_chrs.md
tests/.issues.xlsb/formula/: Sheet1.md  datatypes.md  issue6.md  spc_chrs.md
tests/.issues.xlsb/sheets/: datatypes.md  issue2.md  issue6.md  spc_chrs.md
tests/.issues.xlsb/vba/: testVBA.vb
