[package]
name = "xl2txt"
version = "0.1.1"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
repository = "https://github.com/tafia/xl2txt"
description = "A tool to convert excel files into *.md *.vb files. Can be used for git difftools"
license = "MIT"
readme = "README.md"
keywords = ["excel", "markdown", "txt", "git", "ods"]

[dependencies]
calamine = "0.11.4"
error-chain = "0.10.0"
